package eapli.base.ordermanagement.domain;

public class Payment_Method {
}
